# VBAG

./: .gitignore  CMakeLists.txt  README.md
include/animation/: animation_engine.hpp
include/data/: triplet.hpp
include/geometry/: graph.hpp  mesh.hpp  object.hpp  scene.hpp  transform.hpp
include/graphics/: camera.hpp  color.hpp  light.hpp  quad_mesh.cpp  quad_mesh.hpp  ray.hpp  triangle_mesh.hpp
include/input/: input.hpp
include/math/: matrix.hpp  vector.hpp
include/output/: d3d9_screen.hpp  screen.hpp
include/tests/: animation_test.hpp
include/util/: error_handling.hpp  floating_point_comparison.hpp  math.hpp  string.hpp
media/images/icon/: vbag_icon.rc
source/: main.cpp
source/animation/: animation_engine.cpp
source/geometry/: mesh.cpp  object.cpp  scene.cpp  transform.cpp
source/graphics/: camera.cpp  light.cpp  quad_mesh.cpp  triangle_mesh.cpp
source/input/: input.cpp
source/tests/: animation_test.cpp
